# iam-proxy

./: .dockerignore  .gitignore  Dockerfile  README-DEV.md  README-Python-Dev.md  README-Setup.md  README.md  README.mongo.md  comandi_git.txt  pyproject.toml
Docker-compose/: README.md  docker-compose.yml  env.example  run-docker-compose.sh
Docker-compose/nginx/conf.d/: default.conf
Docker-compose/nginx/html/: index.html
docs/: docker_compose_profiles.md  run-docker-compose.sh.md  satosa-nginx-vhost.md  satosa-nginx_compose_service.md  systemd.md  uwsgi.ini.md
example/: entrypoint.sh
example/attributes-map/: satosa_spid_uri_hybrid.py
example/backends/: spidsaml2.py
example/metadata/idp/: spid-saml-check.xml  spid-sp-test.xml
example/plugins/backends/: pyeudiw_backend.yaml  spidsaml2_backend.yaml
example/plugins/frontends/: openid_connect_frontend.yaml
example/uwsgi_setup/init/: iam-proxy-italia
example/uwsgi_setup/uwsgi/: uwsgi.ini  uwsgi.ini.debug  uwsgi.ini.docker
example_sp/djangosaml2_sp/: README.md
example_sp/pysaml2/: start.sh
